# extension-template-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  duckdb_extension_c_api.Makefile  duckdb_extension_rs.Makefile
.cargo/: config.toml
.github/workflows/: MainDistributionPipeline.yml  _extension_deploy.yml  _extension_distribution.yml
src/: lib.rs
test/sql/: rusty_quack.test
