[package]
name = "rusty-quack"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
duckdb = { version = "1.0.0", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.2"
libduckdb-sys = { version = "1.0.0", features = ["loadable_extension"] }

# TODO remove once published
[patch.crates-io]
duckdb = { path = "../duckdb-rs/crates/duckdb" }
duckdb-loadable-macros = { path = "../duckdb-rs/crates/duckdb-loadable-macros" }
libduckdb-sys = { path = "../duckdb-rs/crates/libduckdb-sys" }